test/fail/bin_punc02.v3
//@parse
class bin_punc02 {
	var c: int = 0b00110;
	var d: int = 0b0.11110101;
	var e: int = 0b010101.01001111;
	var f: int = 0b11111111.11111111;
	var g: int = 0b11110000.11110000.11110000.11110000;
}
